026-using-kubernetes/ep026.10.02-networking-part-2-ingress/asrv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asrv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: asrv
  template:
    metadata:
      labels:
        app: asrv
    spec:
      containers:
      - name: asrv
        image: striversity/using-k8s:asrv
        ports:
        - containerPort: 8080
