026-using-kubernetes/ep026.10.02-networking-part-2-ingress/asrv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asrv
  labels:
    name: asrv
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: asrv
            port: 
              number: 8080
